feat(governance): add M2 risk assessment and policy routing
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)
